--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/SamZhou99/node-utils#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1"
   }
 }
