--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "自己常用功能集合",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js && exit 1"
   },
   "repository": {
     "type": "git",
