--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-utils99",
-  "version": "1.0.3",
+  "version": "1.1.20200617",
   "description": "自己常用功能集合",
   "main": "main.js",
   "scripts": {
